--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,9 +6,8 @@
           href="{{ '/' | relative_url }}"
           class="text-2xl font-bold text-primary-800 hover:text-primary-900 no-underline"
         >
-          {{ site.title | escape }}
+          <h1>{{ site.title | escape }}</h1>
         </a>
-        <p class="text-sm text-primary-600">{{ site.description | escape }}</p>
       </div>
 
       <nav>
